# sgx-libtpms

./: README.md  autogen.sh  build_libenclave_tpms.sh  configure.ac
include/libtpms/: tpm_library.h  tpm_library.h.in  tpm_types.h
sgx-libtpms/: Makefile
sgx-libtpms/Enclave/: Enclave.config.xml  Enclave.edl
sgx-libtpms/Include/: enclave_tpm_types.h  ssl_enclave_types.h
src/: Makefile.am  sgx_stub.c  sgx_stub.h  tpm_library.c  tpm_library_intern.h  tpm_nvfile.c  tpm_tpm2_interface.c  tpm_tpm2_tis.c
src/tpm2/: Clock.c  Entropy.c  LibtpmsCallbacks.c  NVMarshal.c  NVMem.c  PlatformClock.h  StateMarshal.c  TPMCmdp.c
